--- a/Bolyai_Janos_embed.html
+++ b/Bolyai_Janos_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -78,114 +79,114 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
-style='font-size:12.0pt;line-height:107%'>Bolyai János</span></b></p>
+style='font-size:12.0pt;line-height:107%'>Bolyai JĂˇnos</span></b></p>
 
-<p class=MsoNormal><img width=178 height=284 id="Kép 1"
+<p class=MsoNormal><img width=178 height=284 id="KĂ©p 1"
 src="Bolyai_Janos_embed_elemei/image001.png"></p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Családi
-háttere és életútja</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>CsalĂˇdi
+hĂˇttere Ă©s Ă©letĂştja</span></b></p>
 
-<p class=MsoNormal>Emléktábla a szülőház falán</p>
+<p class=MsoNormal>EmlĂ©ktĂˇbla a szĂĽlĹ‘hĂˇz falĂˇn</p>
 
-<p class=MsoNormal>&quot;Az 1802. év 12. havának 15. napján, itt született
-Bolyai Bolyai János, a magyar Euklides, Bolyai Bolyai Farkasnak, a Tentamen
-mély gondolkozású szerzőjének fia. Minek az emlékezetére száz év multán a
-Ferencz József Tudományegyetem mathematikai és természettudományi kara állítá e
-követ.</p>
+<p class=MsoNormal>&quot;Az 1802. Ă©v 12. havĂˇnak 15. napjĂˇn, itt szĂĽletett
+Bolyai Bolyai JĂˇnos, a magyar Euklides, Bolyai Bolyai Farkasnak, a Tentamen
+mĂ©ly gondolkozĂˇsĂş szerzĹ‘jĂ©nek fia. Minek az emlĂ©kezetĂ©re szĂˇz Ă©v multĂˇn a
+Ferencz JĂłzsef TudomĂˇnyegyetem mathematikai Ă©s termĂ©szettudomĂˇnyi kara ĂˇllĂ­tĂˇ e
+kĂ¶vet.</p>
 
-<p class=MsoNormal>Apai nagyszülei, Bolyai Gáspár és pávai Vajna Krisztina
-révén magyar-székely, anyai nagyszülei, árkosi Benkő József és Bachmann Júlia
-által magyar-szász származású. Kolozsváron született, ahol szülőháza ma is
-látható, pár lépésre a város főterétől. Szülei Bolyai Farkas matematikus és
-író, illetve Benkő Zsuzsanna első gyermekeként született, egyetlen húga
-kisgyermek korában meghalt. Már gyermekkorában jelét adta nem mindennapi
-képességeinek. Hétévesen németül és hegedülni kezdett tanulni. Eleinte apja,
-majd a marosvásárhelyi kollégium felső osztályos diákjai tanították. 1814-ben,
-azaz tizenkét évesen íratták be a kollégiumba, ahol rögtön a negyedik osztályba
-került, és 1817-ben évfolyamelsőként tette le a záróvizsgát.</p>
+<p class=MsoNormal>Apai nagyszĂĽlei, Bolyai GĂˇspĂˇr Ă©s pĂˇvai Vajna Krisztina
+rĂ©vĂ©n magyar-szĂ©kely, anyai nagyszĂĽlei, Ăˇrkosi BenkĹ‘ JĂłzsef Ă©s Bachmann JĂşlia
+Ăˇltal magyar-szĂˇsz szĂˇrmazĂˇsĂş. KolozsvĂˇron szĂĽletett, ahol szĂĽlĹ‘hĂˇza ma is
+lĂˇthatĂł, pĂˇr lĂ©pĂ©sre a vĂˇros fĹ‘terĂ©tĹ‘l. SzĂĽlei Bolyai Farkas matematikus Ă©s
+Ă­rĂł, illetve BenkĹ‘ Zsuzsanna elsĹ‘ gyermekekĂ©nt szĂĽletett, egyetlen hĂşga
+kisgyermek korĂˇban meghalt. MĂˇr gyermekkorĂˇban jelĂ©t adta nem mindennapi
+kĂ©pessĂ©geinek. HĂ©tĂ©vesen nĂ©metĂĽl Ă©s hegedĂĽlni kezdett tanulni. Eleinte apja,
+majd a marosvĂˇsĂˇrhelyi kollĂ©gium felsĹ‘ osztĂˇlyos diĂˇkjai tanĂ­tottĂˇk. 1814-ben,
+azaz tizenkĂ©t Ă©vesen Ă­rattĂˇk be a kollĂ©giumba, ahol rĂ¶gtĂ¶n a negyedik osztĂˇlyba
+kerĂĽlt, Ă©s 1817-ben Ă©vfolyamelsĹ‘kĂ©nt tette le a zĂˇrĂłvizsgĂˇt.</p>
 
-<p class=MsoNormal>Bolyai Farkasnak az volt az elképzelése, hogy fiát a
-göttingeni egyetemre küldi, ahol ő maga is tanult, és ehhez barátja, az akkor
-már világhírű Gauss segítségét kérte.[14] Mivel Gauss a levélre nem válaszolt,
-Bolyai János 1818-ban a bécsi hadmérnöki akadémiára felvételizett.
-Taníttatásának költségeit báró Kemény Miklós vállalta, utóbb báró Kendeffy Ádám
-is hozzájárult. A választott intézményt illetően elég hamar csalódnia kellett:
-matematikát csak az első két évben tanultak, és számtalan olyan
-kötelezettségnek kellett eleget tennie, amelyek untatták. Ebben az időben
-kezdte el a párhuzamosok tanulmányozását; a matematika mellett a másik kedves
-időtöltése a zene volt. Az akadémiát 1822 szeptemberében kiváló eredménnyel
-fejezte be, ezt követően mérnökkari tisztjelöltként még egy évig a katonai
-építészmérnökök szaktantárgyait tanulta. 1823-ban alhadnagyi rangban a
-temesvári erődítési igazgatóságra küldték, ahonnan matematikai felfedezéseivel
-kapcsolatban azt írta édesapjának, hogy: „Semmiből egy ujj más világot
-teremtettem. 1826 áprilisától pedig az aradi erődítési igazgatóságon dolgozott,
-ahol 1827-ben főhadnaggyá léptették elő. 1827 végén–1828 elején betegségét
-követően Marosvásárhelyre utazott lábadozni, de 1828. második felében is sokat
-szenvedett a maláriától. 1828-ban Nagyváradon, 1829-ben Szegeden végzett
-katonai felméréseket. 1831 májusától Lembergben, a galíciai főhadparancsnokság
-lembergi kerületi műszaki és erődítési igazgatóság mérnöktisztjeként szolgált
-másodosztályú kapitányi rangban, majd 1832-ben Olmützbe helyezték. Útban
-szolgálati helye felé balesetet szenvedett, amelynek következtében több mint
-egy hónapig agyrázkódással ápolták.[17]</p>
+<p class=MsoNormal>Bolyai Farkasnak az volt az elkĂ©pzelĂ©se, hogy fiĂˇt a
+gĂ¶ttingeni egyetemre kĂĽldi, ahol Ĺ‘ maga is tanult, Ă©s ehhez barĂˇtja, az akkor
+mĂˇr vilĂˇghĂ­rĹ± Gauss segĂ­tsĂ©gĂ©t kĂ©rte.[14] Mivel Gauss a levĂ©lre nem vĂˇlaszolt,
+Bolyai JĂˇnos 1818-ban a bĂ©csi hadmĂ©rnĂ¶ki akadĂ©miĂˇra felvĂ©telizett.
+TanĂ­ttatĂˇsĂˇnak kĂ¶ltsĂ©geit bĂˇrĂł KemĂ©ny MiklĂłs vĂˇllalta, utĂłbb bĂˇrĂł Kendeffy ĂdĂˇm
+is hozzĂˇjĂˇrult. A vĂˇlasztott intĂ©zmĂ©nyt illetĹ‘en elĂ©g hamar csalĂłdnia kellett:
+matematikĂˇt csak az elsĹ‘ kĂ©t Ă©vben tanultak, Ă©s szĂˇmtalan olyan
+kĂ¶telezettsĂ©gnek kellett eleget tennie, amelyek untattĂˇk. Ebben az idĹ‘ben
+kezdte el a pĂˇrhuzamosok tanulmĂˇnyozĂˇsĂˇt; a matematika mellett a mĂˇsik kedves
+idĹ‘tĂ¶ltĂ©se a zene volt. Az akadĂ©miĂˇt 1822 szeptemberĂ©ben kivĂˇlĂł eredmĂ©nnyel
+fejezte be, ezt kĂ¶vetĹ‘en mĂ©rnĂ¶kkari tisztjelĂ¶ltkĂ©nt mĂ©g egy Ă©vig a katonai
+Ă©pĂ­tĂ©szmĂ©rnĂ¶kĂ¶k szaktantĂˇrgyait tanulta. 1823-ban alhadnagyi rangban a
+temesvĂˇri erĹ‘dĂ­tĂ©si igazgatĂłsĂˇgra kĂĽldtĂ©k, ahonnan matematikai felfedezĂ©seivel
+kapcsolatban azt Ă­rta Ă©desapjĂˇnak, hogy: â€žSemmibĹ‘l egy ujj mĂˇs vilĂˇgot
+teremtettem. 1826 ĂˇprilisĂˇtĂłl pedig az aradi erĹ‘dĂ­tĂ©si igazgatĂłsĂˇgon dolgozott,
+ahol 1827-ben fĹ‘hadnaggyĂˇ lĂ©ptettĂ©k elĹ‘. 1827 vĂ©gĂ©nâ€“1828 elejĂ©n betegsĂ©gĂ©t
+kĂ¶vetĹ‘en MarosvĂˇsĂˇrhelyre utazott lĂˇbadozni, de 1828. mĂˇsodik felĂ©ben is sokat
+szenvedett a malĂˇriĂˇtĂłl. 1828-ban NagyvĂˇradon, 1829-ben Szegeden vĂ©gzett
+katonai felmĂ©rĂ©seket. 1831 mĂˇjusĂˇtĂłl Lembergben, a galĂ­ciai fĹ‘hadparancsnoksĂˇg
+lembergi kerĂĽleti mĹ±szaki Ă©s erĹ‘dĂ­tĂ©si igazgatĂłsĂˇg mĂ©rnĂ¶ktisztjekĂ©nt szolgĂˇlt
+mĂˇsodosztĂˇlyĂş kapitĂˇnyi rangban, majd 1832-ben OlmĂĽtzbe helyeztĂ©k. Ăštban
+szolgĂˇlati helye felĂ© balesetet szenvedett, amelynek kĂ¶vetkeztĂ©ben tĂ¶bb mint
+egy hĂłnapig agyrĂˇzkĂłdĂˇssal ĂˇpoltĂˇk.[17]</p>
 
-<p class=MsoNormal>1833-ban betegsége miatt nyugdíjazását kérte, amit a
-„kilátással a későbbi visszahelyezésre” megjegyzéssel kapott meg.[8] Ekkor
-visszatért Marosvásárhelyre, ahol özvegy édesapjával lakott, közös
-háztartásban. 1834-ben kiköltözött a család domáldi birtokára, ahol
-gazdálkodással foglalkozott, emellett újból nekilátott a matematikai
-kutatásoknak.[8][18] Gazdasszonya a kurtanemesi családból származó kibédi Orbán
-Rozália volt, aki két gyermeket is szült neki: Dénest (1837–1913) és Amáliát
-(1840–1893). 1845-ben Bolyai Farkas másnak adta bérbe a családi birtokot, mivel
-úgy találta, hogy fia elhanyagolja a gazdaságot, így 1846 elején János
-visszaköltözött Marosvásárhelyre. Ezzel a lépéssel anyagilag elég rossz
-helyzetbe került, mivel a nyugdíja alacsony volt.</p>
+<p class=MsoNormal>1833-ban betegsĂ©ge miatt nyugdĂ­jazĂˇsĂˇt kĂ©rte, amit a
+â€žkilĂˇtĂˇssal a kĂ©sĹ‘bbi visszahelyezĂ©sreâ€ť megjegyzĂ©ssel kapott meg.[8] Ekkor
+visszatĂ©rt MarosvĂˇsĂˇrhelyre, ahol Ă¶zvegy Ă©desapjĂˇval lakott, kĂ¶zĂ¶s
+hĂˇztartĂˇsban. 1834-ben kikĂ¶ltĂ¶zĂ¶tt a csalĂˇd domĂˇldi birtokĂˇra, ahol
+gazdĂˇlkodĂˇssal foglalkozott, emellett ĂşjbĂłl nekilĂˇtott a matematikai
+kutatĂˇsoknak.[8][18] Gazdasszonya a kurtanemesi csalĂˇdbĂłl szĂˇrmazĂł kibĂ©di OrbĂˇn
+RozĂˇlia volt, aki kĂ©t gyermeket is szĂĽlt neki: DĂ©nest (1837â€“1913) Ă©s AmĂˇliĂˇt
+(1840â€“1893). 1845-ben Bolyai Farkas mĂˇsnak adta bĂ©rbe a csalĂˇdi birtokot, mivel
+Ăşgy talĂˇlta, hogy fia elhanyagolja a gazdasĂˇgot, Ă­gy 1846 elejĂ©n JĂˇnos
+visszakĂ¶ltĂ¶zĂ¶tt MarosvĂˇsĂˇrhelyre. Ezzel a lĂ©pĂ©ssel anyagilag elĂ©g rossz
+helyzetbe kerĂĽlt, mivel a nyugdĂ­ja alacsony volt.</p>
 
-<p class=MsoNormal>1848-ban a magyar hadügyminisztérium felhívást tett közzé a
-szolgálaton kívüli és nyugalomba helyezett katonatisztek számára, hogy lépjenek
-be a honvédségbe; az erdélyi közvélemény is azt várta Bolyaitól, hogy katonai
-feladatot vállaljon. Bolyai, noha azonosult a forradalom törekvéseivel,
-betegsége miatt nem vállalta a hadi szolgálatot.</p>
+<p class=MsoNormal>1848-ban a magyar hadĂĽgyminisztĂ©rium felhĂ­vĂˇst tett kĂ¶zzĂ© a
+szolgĂˇlaton kĂ­vĂĽli Ă©s nyugalomba helyezett katonatisztek szĂˇmĂˇra, hogy lĂ©pjenek
+be a honvĂ©dsĂ©gbe; az erdĂ©lyi kĂ¶zvĂ©lemĂ©ny is azt vĂˇrta BolyaitĂłl, hogy katonai
+feladatot vĂˇllaljon. Bolyai, noha azonosult a forradalom tĂ¶rekvĂ©seivel,
+betegsĂ©ge miatt nem vĂˇllalta a hadi szolgĂˇlatot.</p>
 
-<p class=MsoNormal>1849 májusában házasságot kötött élettársával, Orbán
-Rozáliával; ezt előzőleg a katonatisztek számára előírt kaució hiánya miatt nem
-tudta megtenni. Júniusban levelet írt Kossuth Lajosnak, amelyben felajánlotta
-szolgálatait a kormánynak, amelytől azt várta, hogy az ország jóléte érdekében
-megvalósítja az ő elképzeléseit; a beadvány további sorsa nem ismert,
-elképzelhető, hogy Bolyai végül is nem küldte el.</p>
+<p class=MsoNormal>1849 mĂˇjusĂˇban hĂˇzassĂˇgot kĂ¶tĂ¶tt Ă©lettĂˇrsĂˇval, OrbĂˇn
+RozĂˇliĂˇval; ezt elĹ‘zĹ‘leg a katonatisztek szĂˇmĂˇra elĹ‘Ă­rt kauciĂł hiĂˇnya miatt nem
+tudta megtenni. JĂşniusban levelet Ă­rt Kossuth Lajosnak, amelyben felajĂˇnlotta
+szolgĂˇlatait a kormĂˇnynak, amelytĹ‘l azt vĂˇrta, hogy az orszĂˇg jĂłlĂ©te Ă©rdekĂ©ben
+megvalĂłsĂ­tja az Ĺ‘ elkĂ©pzelĂ©seit; a beadvĂˇny tovĂˇbbi sorsa nem ismert,
+elkĂ©pzelhetĹ‘, hogy Bolyai vĂ©gĂĽl is nem kĂĽldte el.</p>
 
-<p class=MsoNormal>1852-ben elvált feleségétől és egy bérelt szobába költözött.
-1860 januárjában tüdőgyulladást és agyhártyagyulladást kapott, de azt
-megelőzően is hosszasan betegeskedett. 1860. január 27-én halt meg. Két nap
-múlva a katonai egyenruhájában, de jeltelen sírba temették el. A marosvásárhelyi
-református egyház halotti anyakönyvébe ezt írták: „Bolyai János, nyugalm.
-Ingenieur Kapitány – meghalt agy- és tüdőgyulladásban. – Híres, nagy elméjű
-matematikus volt, az elsők között is első. Kár, hogy nagy talentuma
-használatlanul ásatott el.</p>
+<p class=MsoNormal>1852-ben elvĂˇlt felesĂ©gĂ©tĹ‘l Ă©s egy bĂ©relt szobĂˇba kĂ¶ltĂ¶zĂ¶tt.
+1860 januĂˇrjĂˇban tĂĽdĹ‘gyulladĂˇst Ă©s agyhĂˇrtyagyulladĂˇst kapott, de azt
+megelĹ‘zĹ‘en is hosszasan betegeskedett. 1860. januĂˇr 27-Ă©n halt meg. KĂ©t nap
+mĂşlva a katonai egyenruhĂˇjĂˇban, de jeltelen sĂ­rba temettĂ©k el. A marosvĂˇsĂˇrhelyi
+reformĂˇtus egyhĂˇz halotti anyakĂ¶nyvĂ©be ezt Ă­rtĂˇk: â€žBolyai JĂˇnos, nyugalm.
+Ingenieur KapitĂˇny â€“ meghalt agy- Ă©s tĂĽdĹ‘gyulladĂˇsban. â€“ HĂ­res, nagy elmĂ©jĹ±
+matematikus volt, az elsĹ‘k kĂ¶zĂ¶tt is elsĹ‘. KĂˇr, hogy nagy talentuma
+hasznĂˇlatlanul Ăˇsatott el.</p>
 
-<p class=MsoNormal>Hagyatéka – Bolyai Farkaséval együtt – nagyrészt a
-marosvásárhelyi Teleki–Bolyai Könyvtárban, valamint a Magyar Tudományos
-Akadémia Könyvtár és Információs Központ Kézirattárának különgyűjteményei
-között mint önálló Bolyai-gyűjtemény található.</p>
+<p class=MsoNormal>HagyatĂ©ka â€“ Bolyai FarkasĂ©val egyĂĽtt â€“ nagyrĂ©szt a
+marosvĂˇsĂˇrhelyi Telekiâ€“Bolyai KĂ¶nyvtĂˇrban, valamint a Magyar TudomĂˇnyos
+AkadĂ©mia KĂ¶nyvtĂˇr Ă©s InformĂˇciĂłs KĂ¶zpont KĂ©zirattĂˇrĂˇnak kĂĽlĂ¶ngyĹ±jtemĂ©nyei
+kĂ¶zĂ¶tt mint Ă¶nĂˇllĂł Bolyai-gyĹ±jtemĂ©ny talĂˇlhatĂł.</p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Műveinek
-magyar nyelvű kiadásai</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>MĹ±veinek
+magyar nyelvĹ± kiadĂˇsai</span></b></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-18.0pt'>1.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>A
-térnek absolut igaz tudománya, a mely független Euklides XI. axiomájától ; ezt
-követi a kör geometriai quadratutárja ez axioma helytelen voltának esetében,
-fordította Rados Ignác, Budapest, MTA Mathematikai és Physikai Társulat, 1897</p>
+tĂ©rnek absolut igaz tudomĂˇnya, a mely fĂĽggetlen Euklides XI. axiomĂˇjĂˇtĂłl ; ezt
+kĂ¶veti a kĂ¶r geometriai quadratutĂˇrja ez axioma helytelen voltĂˇnak esetĂ©ben,
+fordĂ­totta Rados IgnĂˇc, Budapest, MTA Mathematikai Ă©s Physikai TĂˇrsulat, 1897</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>2.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Appendix,
-a tér tudománya, Akadémiai Kiadó, Budapest, 1977, ISBN 963-05-1512-1</p>
+a tĂ©r tudomĂˇnya, AkadĂ©miai KiadĂł, Budapest, 1977, ISBN 963-05-1512-1</p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-18.0pt'>3.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Fogalmazványok
-a Tanhoz, illetőleg az Üdvtanhoz, Ambrus Hedvig Mária, Deé Nagy Anikó és
-Vakarcs Szilárd közreműködésével szerkesztette és bevezetéssel ellátta Benkő
-Samu, Kolozsvár, Erdélyi Múzeum-Egyesület, 2003, ISBN 973-8231-27-2</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>FogalmazvĂˇnyok
+a Tanhoz, illetĹ‘leg az Ăśdvtanhoz, Ambrus Hedvig MĂˇria, DeĂ© Nagy AnikĂł Ă©s
+Vakarcs SzilĂˇrd kĂ¶zremĹ±kĂ¶dĂ©sĂ©vel szerkesztette Ă©s bevezetĂ©ssel ellĂˇtta BenkĹ‘
+Samu, KolozsvĂˇr, ErdĂ©lyi MĂşzeum-EgyesĂĽlet, 2003, ISBN 973-8231-27-2</p>
 
 </div>
 
