--- a/Janossy_Lajos_embed.html
+++ b/Janossy_Lajos_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -78,52 +79,52 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
-style='font-size:12.0pt;line-height:107%'>Jánossy Lajos</span></b></p>
+style='font-size:12.0pt;line-height:107%'>JĂˇnossy Lajos</span></b></p>
 
-<p class=MsoNormal><img width=215 height=235 id="Kép 1"
+<p class=MsoNormal><img width=215 height=235 id="KĂ©p 1"
 src="Janossy_Lajos_embed_elemei/image001.png"></p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Életútja</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Ă‰letĂştja</span></b></p>
 
-<p class=MsoNormal>A Tanácsköztársaság bukását követően, 1919-ben édesanyjával,
-Bortstieber Gertrúddal és mostohaapjával, Lukács Györggyel együtt elhagyták az
-országot és Bécsben telepedtek le. Középiskoláit Bécsben járta ki, felsőfokú
-tanulmányait pedig 1930–1934 között a bécsi és a berlini egyetemeken végezte.
-1934-től Berlinben, Werner Kolhörster asztrofizikai laboratóriumában dolgozott.
-A nácizmus és a második világháború elől menekülve 1936-ban Londonba települt
-át, és 1938-ig a Birkbeck College-ban végzett kutatómunkát. 1938-tól a
-Manchesteri Egyetemen, a később Nobel-díjjal kitüntetett Patrick Blackett által
-irányított kozmikussugárzás-kutató csoportban folytatott asztrofizikai
-vizsgálatokat. 1947-től Walter Heitler és Erwin Schrödinger kvantumfizikusok
-hívására a Dublin Institute for Advanced Studies professzoraként és a kozmikus
-sugárzást tanulmányozó laboratóriumi kutatócsoport vezetőjeként dolgozott.</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>1950-ben a Dobi István-kormány mindent megtett azért, hogy
-Jánossy visszatérjen Magyarországra. Rendes akadémiai tagságot kínáltak fel
-számára (noha nem volt az Akadémia levelező tagja), egyúttal kinevezték a
-budapesti Eötvös Loránd Tudományegyetem tanárává és az MTA akkor alapítandó
-Központi Fizikai Kutatóintézetének (KFKI) osztályvezetőjévé, a Kozmikus
-Sugárzási Laboratórium vezetőjévé. Jánossy élt a lehetőséggel, még 1950-ben
-hazatért, elfoglalta a felajánlott posztokat és jelentősen hozzájárult a
-működését végül 1951-ben megkezdő KFKI szervezési munkálataihoz. 1954-től a
-kutatóintézet igazgatóhelyettese, 1956-tól igazgatója, 1970-től haláláig
-tudományos tanácsadója és igazgatótanácsának tagja volt. Ezzel párhuzamosan a
-budapesti tudományegyetem elméleti fizikai tanszékén oktatott, majd 1957 és
-1970 között az atomfizikai tanszék első vezetője volt. Kutatóintézeti igazgatói
-mivoltában kíméletlenül eltávolította az intézetből azokat, akik vezetői voltak
-1956-ban a KFKI Forradalmi Bizottságának, noha annak maga is tagja volt.</p>
+<p class=MsoNormal>A TanĂˇcskĂ¶ztĂˇrsasĂˇg bukĂˇsĂˇt kĂ¶vetĂµen, 1919-ben Ă©desanyjĂˇval,
+Bortstieber GertrĂşddal Ă©s mostohaapjĂˇval, LukĂˇcs GyĂ¶rggyel egyĂĽtt elhagytĂˇk az
+orszĂˇgot Ă©s BĂ©csben telepedtek le. KĂ¶zĂ©piskolĂˇit BĂ©csben jĂˇrta ki, felsĂµfokĂş
+tanulmĂˇnyait pedig 1930â€“1934 kĂ¶zĂ¶tt a bĂ©csi Ă©s a berlini egyetemeken vĂ©gezte.
+1934-tĂµl Berlinben, Werner KolhĂ¶rster asztrofizikai laboratĂłriumĂˇban dolgozott.
+A nĂˇcizmus Ă©s a mĂˇsodik vilĂˇghĂˇborĂş elĂµl menekĂĽlve 1936-ban Londonba telepĂĽlt
+Ăˇt, Ă©s 1938-ig a Birkbeck College-ban vĂ©gzett kutatĂłmunkĂˇt. 1938-tĂłl a
+Manchesteri Egyetemen, a kĂ©sĂµbb Nobel-dĂ­jjal kitĂĽntetett Patrick Blackett Ăˇltal
+irĂˇnyĂ­tott kozmikussugĂˇrzĂˇs-kutatĂł csoportban folytatott asztrofizikai
+vizsgĂˇlatokat. 1947-tĂµl Walter Heitler Ă©s Erwin SchrĂ¶dinger kvantumfizikusok
+hĂ­vĂˇsĂˇra a Dublin Institute for Advanced Studies professzorakĂ©nt Ă©s a kozmikus
+sugĂˇrzĂˇst tanulmĂˇnyozĂł laboratĂłriumi kutatĂłcsoport vezetĂµjekĂ©nt dolgozott.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal>Politikai szerepvállalását az is jelzi, hogy 1962-től
-haláláig tagja volt a Magyar Szocialista Munkáspárt Központi Bizottságának,
-emellett szerepet vállalt a fővárosi XII. kerületi pártszervezet és a KFKI
-végrehajtó bizottságának pártmunkájában is</p>
+<p class=MsoNormal>1950-ben a Dobi IstvĂˇn-kormĂˇny mindent megtett azĂ©rt, hogy
+JĂˇnossy visszatĂ©rjen MagyarorszĂˇgra. Rendes akadĂ©miai tagsĂˇgot kĂ­nĂˇltak fel
+szĂˇmĂˇra (noha nem volt az AkadĂ©mia levelezĂµ tagja), egyĂşttal kineveztĂ©k a
+budapesti EĂ¶tvĂ¶s LorĂˇnd TudomĂˇnyegyetem tanĂˇrĂˇvĂˇ Ă©s az MTA akkor alapĂ­tandĂł
+KĂ¶zponti Fizikai KutatĂłintĂ©zetĂ©nek (KFKI) osztĂˇlyvezetĂµjĂ©vĂ©, a Kozmikus
+SugĂˇrzĂˇsi LaboratĂłrium vezetĂµjĂ©vĂ©. JĂˇnossy Ă©lt a lehetĂµsĂ©ggel, mĂ©g 1950-ben
+hazatĂ©rt, elfoglalta a felajĂˇnlott posztokat Ă©s jelentĂµsen hozzĂˇjĂˇrult a
+mĂ»kĂ¶dĂ©sĂ©t vĂ©gĂĽl 1951-ben megkezdĂµ KFKI szervezĂ©si munkĂˇlataihoz. 1954-tĂµl a
+kutatĂłintĂ©zet igazgatĂłhelyettese, 1956-tĂłl igazgatĂłja, 1970-tĂµl halĂˇlĂˇig
+tudomĂˇnyos tanĂˇcsadĂłja Ă©s igazgatĂłtanĂˇcsĂˇnak tagja volt. Ezzel pĂˇrhuzamosan a
+budapesti tudomĂˇnyegyetem elmĂ©leti fizikai tanszĂ©kĂ©n oktatott, majd 1957 Ă©s
+1970 kĂ¶zĂ¶tt az atomfizikai tanszĂ©k elsĂµ vezetĂµje volt. KutatĂłintĂ©zeti igazgatĂłi
+mivoltĂˇban kĂ­mĂ©letlenĂĽl eltĂˇvolĂ­totta az intĂ©zetbĂµl azokat, akik vezetĂµi voltak
+1956-ban a KFKI Forradalmi BizottsĂˇgĂˇnak, noha annak maga is tagja volt.</p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Főbb
-művei</span></b></p>
+<p class=MsoNormal>&nbsp;</p>
+
+<p class=MsoNormal>Politikai szerepvĂˇllalĂˇsĂˇt az is jelzi, hogy 1962-tĂµl
+halĂˇlĂˇig tagja volt a Magyar Szocialista MunkĂˇspĂˇrt KĂ¶zponti BizottsĂˇgĂˇnak,
+emellett szerepet vĂˇllalt a fĂµvĂˇrosi XII. kerĂĽleti pĂˇrtszervezet Ă©s a KFKI
+vĂ©grehajtĂł bizottsĂˇgĂˇnak pĂˇrtmunkĂˇjĂˇban is</p>
+
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>FĂµbb
+mĂ»vei</span></b></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-18.0pt'>1.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Cosmic
@@ -135,23 +136,23 @@ rays and nuclear physics, London, Pilot Press, 1948, 186 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>3.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Magyarul:
-Kozmikus sugárzás, Budapest, Művelt Nép, 1954, 137 o.</p>
+Kozmikus sugĂˇrzĂˇs, Budapest, MĂ»velt NĂ©p, 1954, 137 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>4.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Olaszul:
 Raggi cosmici e fisica nucleare, Milano, Bompiani, 1954, 275 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>5.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Németül:
-Einführung in die kosmische Strahlenforschung, Berlin, Deutscher Verlag der
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>NĂ©metĂĽl:
+EinfĂĽhrung in die kosmische Strahlenforschung, Berlin, Deutscher Verlag der
 Wissenschaften, 1955, 148 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>6.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Lengyelül:
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>LengyelĂĽl:
 Promienie kosmiczne, Warszawa, Wiedza Powszechna, 1956, 158 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>7.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Bolgárul:
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>BolgĂˇrul:
 Koszmicsni lacsi, Szofija, Akad, 1957, 141 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>8.<span
@@ -168,12 +169,12 @@ of the special theory of relativity, Budapest, Central Research Institute of
 Physics, 1960, 76 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>11.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Magyarul: Filozófiai
-megjegyzések a speciális relativitáselméletről, Budapest, Központi Fizikai
-Kutatóintézet, 1960, 62 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Magyarul: FilozĂłfiai
+megjegyzĂ©sek a speciĂˇlis relativitĂˇselmĂ©letrĂµl, Budapest, KĂ¶zponti Fizikai
+KutatĂłintĂ©zet, 1960, 62 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>12.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Überlegungen zu den
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Ăśberlegungen zu den
 Grundlagen der Wahrscheinlchikeitsrechnung, Berlin, Akademie-Verlag, 1960, 23
 o.</p>
 
@@ -184,16 +185,16 @@ of Physics, 1963, 42 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>14.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Atommaglexikon,
-főszerk. Jánossy Lajos, Budapest, Akadémiai, 1963, 453 o.</p>
+fĂµszerk. JĂˇnossy Lajos, Budapest, AkadĂ©miai, 1963, 453 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>15.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A relativitáselmélet
-filozófiai problémái, Budapest, Akadémiai, 1963, 351 o. (Elek Tiborral)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A relativitĂˇselmĂ©let
+filozĂłfiai problĂ©mĂˇi, Budapest, AkadĂ©miai, 1963, 351 o. (Elek Tiborral)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>16.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A relativitáselmélet
-problémaköre a Lorentz-elv megvilágításában, szerk. Siklós Tivadar, Budapest,
-Központi Fizikai Kutatóintézet, 1964, 47 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A relativitĂˇselmĂ©let
+problĂ©makĂ¶re a Lorentz-elv megvilĂˇgĂ­tĂˇsĂˇban, szerk. SiklĂłs Tivadar, Budapest,
+KĂ¶zponti Fizikai KutatĂłintĂ©zet, 1964, 47 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>17.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Theory and practice of
@@ -204,76 +205,76 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Oroszul: Tyeorija i
 parktyika obrabotki rezultatov izmerenyij, Moszkva, Mir, 1965, 462 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>19.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Magyarul: Mérési
-eredmények kiértékelésének elmélete és gyakorlata, Budapest, Akadémiai, 1968,
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Magyarul: MĂ©rĂ©si
+eredmĂ©nyek kiĂ©rtĂ©kelĂ©sĂ©nek elmĂ©lete Ă©s gyakorlata, Budapest, AkadĂ©miai, 1968,
 527 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>20.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A valószínűségelmélet
-alapjai és néhány alkalmazása különös tekintettel mérési eredmények
-kiértékelésére, Budapest, Tankönyvkiadó, 1965, 206 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>A valĂłszĂ­nĂ»sĂ©gelmĂ©let
+alapjai Ă©s nĂ©hĂˇny alkalmazĂˇsa kĂĽlĂ¶nĂ¶s tekintettel mĂ©rĂ©si eredmĂ©nyek
+kiĂ©rtĂ©kelĂ©sĂ©re, Budapest, TankĂ¶nyvkiadĂł, 1965, 206 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>21.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Relativitáselmélet és
-fizikai valóság, Budapest, Gondolat, 1967, 327 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>RelativitĂˇselmĂ©let Ă©s
+fizikai valĂłsĂˇg, Budapest, Gondolat, 1967, 327 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>22.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Angolul: Theory of
-relativity based on physical reality, Budapest, Akadémiai, 1971, 317 o.</p>
+relativity based on physical reality, Budapest, AkadĂ©miai, 1971, 317 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>23.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Bolgárul: Teoriâta na
-otnositelnostta i fizičeskata dejstvitelnost, Szofija, Akad., 1973, 269 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>BolgĂˇrul: TeoriĂ˘ta na
+otnositelnostta i fiziĂ¨eskata dejstvitelnost, Szofija, Akad., 1973, 269 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>24.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Japánul:
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>JapĂˇnul:
 Butsurigakuteki sotaisei riron, Tokyo, Kodansa, 1974, 384 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>25.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Fizika, I–III. köt.,
-Budapest, Tankönyvkiadó, 1969–1971. (Főzy Istvánnal és Kulin Györggyel)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Fizika, Iâ€“III. kĂ¶t.,
+Budapest, TankĂ¶nyvkiadĂł, 1969â€“1971. (FĂµzy IstvĂˇnnal Ă©s Kulin GyĂ¶rggyel)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>26.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Papers published from
-1934 to 1971, I–V. köt., Budapest, Central Research Institute of Physics,
-1962–1971.</p>
+1934 to 1971, Iâ€“V. kĂ¶t., Budapest, Central Research Institute of Physics,
+1962â€“1971.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>27.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Valószínűségszámítás,
-Budapest, Tankönyvkiadó, 1972, 61 o. (Tasnádi Péterrel)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>ValĂłszĂ­nĂ»sĂ©gszĂˇmĂ­tĂˇs,
+Budapest, TankĂ¶nyvkiadĂł, 1972, 61 o. (TasnĂˇdi PĂ©terrel)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>28.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Vektorszámítás, Budapest,
-Tankönyvkiadó, 1973, 470 o. (Tasnádi Péterrel)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>VektorszĂˇmĂ­tĂˇs, Budapest,
+TankĂ¶nyvkiadĂł, 1973, 470 o. (TasnĂˇdi PĂ©terrel)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>29.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Relativitáselmélet a
-fizikai valóság alapján, Budapest, Akadémiai, 1973, 311 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>RelativitĂˇselmĂ©let a
+fizikai valĂłsĂˇg alapjĂˇn, Budapest, AkadĂ©miai, 1973, 311 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>30.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Szemléletes
-differenciálszámítás: Függvényektől a differenciálásig, Budapest,
-Tankönyvkiadó, 1974, 166 o. (Jánossy Istvánnal).</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>SzemlĂ©letes
+differenciĂˇlszĂˇmĂ­tĂˇs: FĂĽggvĂ©nyektĂµl a differenciĂˇlĂˇsig, Budapest,
+TankĂ¶nyvkiadĂł, 1974, 166 o. (JĂˇnossy IstvĂˇnnal).</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>31.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Szemléletes
-integrálszámítás, Budapest, Tankönyvkiadó, 1974, 154 o. (Jánossy Istvánnal)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>SzemlĂ©letes
+integrĂˇlszĂˇmĂ­tĂˇs, Budapest, TankĂ¶nyvkiadĂł, 1974, 154 o. (JĂˇnossy IstvĂˇnnal)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>32.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Fejezetek a
-mechanikából, szerk. Sas Elemér, Budapest, Minerva, 1975, 151 o.</p>
+mechanikĂˇbĂłl, szerk. Sas ElemĂ©r, Budapest, Minerva, 1975, 151 o.</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>33.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Vektorszámítás, I–III.
-köt., Budapest, Tankönyvkiadó, 1980–1983. (Tasnádi Péterrel és Gnädig Péterrel)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>VektorszĂˇmĂ­tĂˇs, Iâ€“III.
+kĂ¶t., Budapest, TankĂ¶nyvkiadĂł, 1980â€“1983. (TasnĂˇdi PĂ©terrel Ă©s GnĂ¤dig PĂ©terrel)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>34.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Vektorok integrálása,
-Budapest, Franklin, 1983, 398 o. (Tasnádi Péterrel és Gnädig Péterrel)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Vektorok integrĂˇlĂˇsa,
+Budapest, Franklin, 1983, 398 o. (TasnĂˇdi PĂ©terrel Ă©s GnĂ¤dig PĂ©terrel)</p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-18.0pt'>35.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Vektorok és tenzorok
-differenciálása, Budapest, Franklin, 1989, 253 o.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Vektorok Ă©s tenzorok
+differenciĂˇlĂˇsa, Budapest, Franklin, 1989, 253 o.</p>
 
 </div>
 
