--- a/Kos_Karoly_embed.html
+++ b/Kos_Karoly_embed.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta charset="utf-8">
+<meta http-equiv=Content-Type content="text/html">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
@@ -78,126 +79,126 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
-style='font-size:12.0pt;line-height:107%'>Kós Károly</span></b></p>
+style='font-size:12.0pt;line-height:107%'>KĂłs KĂˇroly</span></b></p>
 
-<p class=MsoNormal><img width=225 height=225 id="Kép 1"
+<p class=MsoNormal><img width=225 height=225 id="KĂ©p 1"
 src="Kos_Karoly_embed_elemei/image001.png"></p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Életútja</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Ă‰letĂştja</span></b></p>
 
-<p class=MsoNormal>Szülőháza Temesváron</p>
+<p class=MsoNormal>SzĂĽlĹ‘hĂˇza TemesvĂˇron</p>
 
-<p class=MsoNormal>Négygyermekes postatisztviselő egyetlen fiaként született.
-Középiskolai tanulmányait a kolozsvári református kollégiumban végezte, ezután
-a budapesti József Nádor Műegyetem mérnöki szakára jelentkezett. Két év múlva
-átiratkozott az építész szakra, ahol 1907-ben szerzett diplomát.</p>
+<p class=MsoNormal>NĂ©gygyermekes postatisztviselĹ‘ egyetlen fiakĂ©nt szĂĽletett.
+KĂ¶zĂ©piskolai tanulmĂˇnyait a kolozsvĂˇri reformĂˇtus kollĂ©giumban vĂ©gezte, ezutĂˇn
+a budapesti JĂłzsef NĂˇdor MĹ±egyetem mĂ©rnĂ¶ki szakĂˇra jelentkezett. KĂ©t Ă©v mĂşlva
+Ăˇtiratkozott az Ă©pĂ­tĂ©sz szakra, ahol 1907-ben szerzett diplomĂˇt.</p>
 
-<p class=MsoNormal>Kezdő építészként különböző építészeti irodákban dolgozott
-(Pogány Móric, Maróti Géza, Györgyi Dénes), majd a Székelyföld építészetét
-tanulmányozta. Tervezői munkájában elsősorban a kalotaszegi népi architektúra,
-az erdélyi népművészet és történelmi építészeti emlékek motívumait igyekezett
-felhasználni. 1912-ben Régi Kalotaszeg c. illusztrált építészeti tanulmányát a
-Magyar Mérnök- és Építész-Egylet Czigler-érmével tüntették ki. 1916-ban őt
-bízták meg IV. Károly király koronázási ünnepsége díszleteinek tervezésével.</p>
+<p class=MsoNormal>KezdĹ‘ Ă©pĂ­tĂ©szkĂ©nt kĂĽlĂ¶nbĂ¶zĹ‘ Ă©pĂ­tĂ©szeti irodĂˇkban dolgozott
+(PogĂˇny MĂłric, MarĂłti GĂ©za, GyĂ¶rgyi DĂ©nes), majd a SzĂ©kelyfĂ¶ld Ă©pĂ­tĂ©szetĂ©t
+tanulmĂˇnyozta. TervezĹ‘i munkĂˇjĂˇban elsĹ‘sorban a kalotaszegi nĂ©pi architektĂşra,
+az erdĂ©lyi nĂ©pmĹ±vĂ©szet Ă©s tĂ¶rtĂ©nelmi Ă©pĂ­tĂ©szeti emlĂ©kek motĂ­vumait igyekezett
+felhasznĂˇlni. 1912-ben RĂ©gi Kalotaszeg c. illusztrĂˇlt Ă©pĂ­tĂ©szeti tanulmĂˇnyĂˇt a
+Magyar MĂ©rnĂ¶k- Ă©s Ă‰pĂ­tĂ©sz-Egylet Czigler-Ă©rmĂ©vel tĂĽntettĂ©k ki. 1916-ban Ĺ‘t
+bĂ­ztĂˇk meg IV. KĂˇroly kirĂˇly koronĂˇzĂˇsi ĂĽnnepsĂ©ge dĂ­szleteinek tervezĂ©sĂ©vel.</p>
 
-<p class=MsoNormal>1910-ben földet vásárolt a kalotaszegi (Alszeg) Sztánán,
-felépítette nyaralóját (későbbi lakóházát) és feleségül vette a türei
-református lelkész leányát, Balázs Idát. Gyermekeik közül Kós Balázs
-(1912–1967) mezőgazdasági szakíró, szerkesztő, Kós András (1914–2010)
-szobrászművész, Koós Zsófia (1916–1990) színésznő, ifj. Kós Károly (1919–1996)
-néprajzkutató, író lett. 1917–1918 során állami ösztöndíjjal Isztambulba ment
-tanulmányútra. 1944 őszén sztánai otthonának – románok általi – kifosztása után
-Kolozsvárra menekült.</p>
+<p class=MsoNormal>1910-ben fĂ¶ldet vĂˇsĂˇrolt a kalotaszegi (Alszeg) SztĂˇnĂˇn,
+felĂ©pĂ­tette nyaralĂłjĂˇt (kĂ©sĹ‘bbi lakĂłhĂˇzĂˇt) Ă©s felesĂ©gĂĽl vette a tĂĽrei
+reformĂˇtus lelkĂ©sz leĂˇnyĂˇt, BalĂˇzs IdĂˇt. Gyermekeik kĂ¶zĂĽl KĂłs BalĂˇzs
+(1912â€“1967) mezĹ‘gazdasĂˇgi szakĂ­rĂł, szerkesztĹ‘, KĂłs AndrĂˇs (1914â€“2010)
+szobrĂˇszmĹ±vĂ©sz, KoĂłs ZsĂłfia (1916â€“1990) szĂ­nĂ©sznĹ‘, ifj. KĂłs KĂˇroly (1919â€“1996)
+nĂ©prajzkutatĂł, Ă­rĂł lett. 1917â€“1918 sorĂˇn Ăˇllami Ă¶sztĂ¶ndĂ­jjal Isztambulba ment
+tanulmĂˇnyĂştra. 1944 Ĺ‘szĂ©n sztĂˇnai otthonĂˇnak â€“ romĂˇnok Ăˇltali â€“ kifosztĂˇsa utĂˇn
+KolozsvĂˇrra menekĂĽlt.</p>
 
-<p class=MsoNormal>1919-ben megalakította a Kalotaszegi Köztársaságot.</p>
+<p class=MsoNormal>1919-ben megalakĂ­totta a Kalotaszegi KĂ¶ztĂˇrsasĂˇgot.</p>
 
-<p class=MsoNormal>1924-ben írótársaival megalapította az erdélyi írók önálló
-könyvkiadó vállalatát, az Erdélyi Szépmíves Céhet, amelynek megszűnéséig,
-1944-ig tagja volt. Egyik alapító tagja volt az 1926-ban alakult helikoni
-közösségnek, amelynek folyóiratát, az Erdélyi Helikont 1931-től ő
-szerkesztette. 1948–49-ben a Világosság c. kolozsvári lap belső munkatársa
+<p class=MsoNormal>1924-ben Ă­rĂłtĂˇrsaival megalapĂ­totta az erdĂ©lyi Ă­rĂłk Ă¶nĂˇllĂł
+kĂ¶nyvkiadĂł vĂˇllalatĂˇt, az ErdĂ©lyi SzĂ©pmĂ­ves CĂ©het, amelynek megszĹ±nĂ©sĂ©ig,
+1944-ig tagja volt. Egyik alapĂ­tĂł tagja volt az 1926-ban alakult helikoni
+kĂ¶zĂ¶ssĂ©gnek, amelynek folyĂłiratĂˇt, az ErdĂ©lyi Helikont 1931-tĹ‘l Ĺ‘
+szerkesztette. 1948â€“49-ben a VilĂˇgossĂˇg c. kolozsvĂˇri lap belsĹ‘ munkatĂˇrsa
 volt.</p>
 
-<p class=MsoNormal>Élete során több közéleti szerepet vállalt: 1912 telén
-Sztánán Kalotaszeg címmel lapot indított, 1921-ben (Paál Árpáddal és Zágoni
-Istvánnal közösen) megjelentette a Kiáltó szó című röpiratát. Alapító tagja
-volt az Erdélyi Néppártnak (1921) és 1922-ben Vasárnap címmel képes politikai
-újságot indított és szerkesztett. A második világháború után, a demokratikus
-átalakulásban reménykedve, újra politikai szerepet vállalt és a Magyar Népi
-Szövetség Kolozs megyei elnöki tisztségét töltötte be, majd 1946–1948 között
-nemzetgyűlési képviselő volt.</p>
+<p class=MsoNormal>Ă‰lete sorĂˇn tĂ¶bb kĂ¶zĂ©leti szerepet vĂˇllalt: 1912 telĂ©n
+SztĂˇnĂˇn Kalotaszeg cĂ­mmel lapot indĂ­tott, 1921-ben (PaĂˇl ĂrpĂˇddal Ă©s ZĂˇgoni
+IstvĂˇnnal kĂ¶zĂ¶sen) megjelentette a KiĂˇltĂł szĂł cĂ­mĹ± rĂ¶piratĂˇt. AlapĂ­tĂł tagja
+volt az ErdĂ©lyi NĂ©ppĂˇrtnak (1921) Ă©s 1922-ben VasĂˇrnap cĂ­mmel kĂ©pes politikai
+ĂşjsĂˇgot indĂ­tott Ă©s szerkesztett. A mĂˇsodik vilĂˇghĂˇborĂş utĂˇn, a demokratikus
+ĂˇtalakulĂˇsban remĂ©nykedve, Ăşjra politikai szerepet vĂˇllalt Ă©s a Magyar NĂ©pi
+SzĂ¶vetsĂ©g Kolozs megyei elnĂ¶ki tisztsĂ©gĂ©t tĂ¶ltĂ¶tte be, majd 1946â€“1948 kĂ¶zĂ¶tt
+nemzetgyĹ±lĂ©si kĂ©pviselĹ‘ volt.</p>
 
-<p class=MsoNormal>1940-től a kolozsvári Mezőgazdasági Főiskolán mezőgazdasági
-építészetet tanított. 1945-től a Főiskola dékánja, majd 1953-ig tanára volt.</p>
+<p class=MsoNormal>1940-tĹ‘l a kolozsvĂˇri MezĹ‘gazdasĂˇgi FĹ‘iskolĂˇn mezĹ‘gazdasĂˇgi
+Ă©pĂ­tĂ©szetet tanĂ­tott. 1945-tĹ‘l a FĹ‘iskola dĂ©kĂˇnja, majd 1953-ig tanĂˇra volt.</p>
 
-<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Építészként</span></b></p>
+<p class=MsoNormal><b><span style='font-size:12.0pt;line-height:107%'>Ă‰pĂ­tĂ©szkĂ©nt</span></b></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-18.0pt'>1.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Óbudai
-református parókia, Budapest (1908–1909)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Ă“budai
+reformĂˇtus parĂłkia, Budapest (1908â€“1909)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>2.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Római
-katolikus templom, Zebegény (1908–1909) – Jánszky Bélával</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>RĂłmai
+katolikus templom, ZebegĂ©ny (1908â€“1909) â€“ JĂˇnszky BĂ©lĂˇval</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>3.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Állatkerti
-pavilonok (például Madárház), Budapest (1909–1910) – Zrumeczky Dezsővel</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Ăllatkerti
+pavilonok (pĂ©ldĂˇul MadĂˇrhĂˇz), Budapest (1909â€“1910) â€“ Zrumeczky DezsĹ‘vel</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>4.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Sztánai
-lakóháza: a „Varjúvár” [1] (1910)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>SztĂˇnai
+lakĂłhĂˇza: a â€žVarjĂşvĂˇrâ€ť [1] (1910)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>5.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Városmajor
-utcai iskola, Budapest (1910–1912) – Györgyi Dénessel</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>VĂˇrosmajor
+utcai iskola, Budapest (1910â€“1912) â€“ GyĂ¶rgyi DĂ©nessel</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>6.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Vécsey-kúria,
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>VĂ©csey-kĂşria,
 Szada (1911)[1]</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>7.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>„Wekerle”
-Munkás és Tisztviselőtelep központja (Kós Károly tér), Budapest (1912–1913)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>â€žWekerleâ€ť
+MunkĂˇs Ă©s TisztviselĹ‘telep kĂ¶zpontja (KĂłs KĂˇroly tĂ©r), Budapest (1912â€“1913)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>8.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Székely
-Nemzeti Múzeum, Sepsiszentgyörgy (1911–1912)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>SzĂ©kely
+Nemzeti MĂşzeum, SepsiszentgyĂ¶rgy (1911â€“1912)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>9.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Református
-templom (&quot;Kakasos templom&quot;), Kolozsvár, Monostori út (1912–1913)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>ReformĂˇtus
+templom (&quot;Kakasos templom&quot;), KolozsvĂˇr, Monostori Ăşt (1912â€“1913)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>10.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>„Kós-ház”, Kós tervei
-alapján készült, eredetileg lakóház (épült 1931-ben) Miskolc, Görgey u. 32</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>â€žKĂłs-hĂˇzâ€ť, KĂłs tervei
+alapjĂˇn kĂ©szĂĽlt, eredetileg lakĂłhĂˇz (Ă©pĂĽlt 1931-ben) Miskolc, GĂ¶rgey u. 32</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>11.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Gyimesi
-határőrlaktanyák (1940?)</p>
+hatĂˇrĹ‘rlaktanyĂˇk (1940?)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>12.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Műcsarnok, Kolozsvár
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>MĹ±csarnok, KolozsvĂˇr
 (1943)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>13.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Mátyás király
-szülőházának részbeni restaurálása, Kolozsvár (1944)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>MĂˇtyĂˇs kirĂˇly
+szĂĽlĹ‘hĂˇzĂˇnak rĂ©szbeni restaurĂˇlĂˇsa, KolozsvĂˇr (1944)</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>14.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Mérai tejcsarnok</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>MĂ©rai tejcsarnok</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>15.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Siklód új temploma
-1994-ben készült el Kós Károly tervei alapján</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>SiklĂłd Ăşj temploma
+1994-ben kĂ©szĂĽlt el KĂłs KĂˇroly tervei alapjĂˇn</p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-18.0pt'>16.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Marosvásárhely
-Gázgyári épület, Mezőgazdasági Iskola</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>MarosvĂˇsĂˇrhely
+GĂˇzgyĂˇri Ă©pĂĽlet, MezĹ‘gazdasĂˇgi Iskola</p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-18.0pt'>17.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>Kolozs Kolozsi
-Általános Iskola</p>
+ĂltalĂˇnos Iskola</p>
 
 </div>
 
